--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,71 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Butwal Bike Rental</title>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/ourServices.css" />
+    <link rel="stylesheet" href="../css/whyus.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/loadingScreen.css" />
+    <link rel="stylesheet" href="../css/swiper.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Butwal Bike Rental</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/ourServices.css" />
-  <link rel="stylesheet" href="../css/whyus.css" />
-  <link rel="stylesheet" href="../css/header.css" />
-  <link rel="stylesheet" href="../css/loadingScreen.css" />
-  <link rel="stylesheet" href="../css/swiper.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
 
-  <link href="lib/animate/animate.min.css" rel="stylesheet" />
-  <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
 
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+  </head>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-</head>
+  <style>
+    .showcase-main {
+      display: flex;
+      height: 100vh;
+    }
 
-<body>
-  <!-- White loading screen -->
-  <div id="loading-screen"></div>
+    .showcase-main .showcase1 {
+      width: 50%;
+    }
 
-  <!-- header section starts -->
-  <header class="header">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-7 showcase1">
-                <div class="headTitle">
-                    <a href="/" class="logo"><img src="/img/rental_logo.png" /></a>
-                    <div class="textContainer">
-                        <p class="titleName">BUTWAL BIKE RENTALS</p>
-                        <p class="slogan">Make Every Ride Special</p>
-                    </div>
-                    <div id="mySidepanel" class="sidepanel">
-                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                      <a href="#">About</a>
-                      <a href="#">Services</a>
-                      <a href="#">Clients</a>
-                      <a href="#">Contact</a>
-                    </div>
-                    
-                    <div class="openbtn" onclick="openNav()">
-                      <i class="fas fa-bars" id="menu"></i>
-                    </div>
-                </div>
-                <img class="back-image img-fluid" src="/img/customer1.jpg" alt="">
-            </div>
-            <div class="col-5 showcase2" style="background-color:  #4B8C91!important;">
-            </div>
+    .showcase-main .showcase2 {
+      width: 50%;
+    }
+
+    .back-image {
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+    }
+
+    @media (max-width: 900px) {
+      .showcase-main .showcase1 {
+        display: none;
+      }
+
+      .showcase-main .showcase2 {
+      width: 100%;
+    }
+
+    }
+  </style>
+  <body>
+    <!-- White loading screen -->
+    <div id="loading-screen"></div>
+
+    <!-- header section starts -->
+    <header class="header">
+      <div class="headTitle">
+        <a href="/" class="logo"><img src="/img/rental_logo.png" /></a>
+        <div class="textContainer">
+          <p class="titleName">BUTWAL BIKE RENTALS</p>
+          <p class="slogan">Make Every Ride Special</p>
         </div>
-    </div>
-</header>
-  
-  <!-- header section ends -->
+        <div id="mySidepanel" class="sidepanel">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >×</a
+          >
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Clients</a>
+          <a href="#">Contact</a>
+        </div>
 
+        <div class="openbtn" onclick="openNav()">
+          <i class="fas fa-bars" id="menu"></i>
+        </div>
+      </div>
+      <div class="showcase-main">
+        <div class="showcase1">
+          <img class="back-image" src="/img/customer1.jpg" alt="" />
+        </div>
+        <div
+          class="showcase2"
+          style="background-color: #4b8c91 !important"
+        ></div>
+      </div>
+    </header>
 
+    <!-- header section ends -->
 
-
-
-  <!-- why-Us starts -->
-  <!-- <div class="why-us">
+    <!-- why-Us starts -->
+    <!-- <div class="why-us">
     <div class="whyUs-heading">
       <p>WHY US ?</p>
     </div>
@@ -132,12 +172,10 @@
       </div>
     </div>
   </div> -->
-  <!-- why-Us ends -->
+    <!-- why-Us ends -->
 
-
-
-  <!-- location section starts -->
-  <!-- <div class="location">
+    <!-- location section starts -->
+    <!-- <div class="location">
     <div class="location-heading">
       <p class="loc">FIND OUR LOCATION</p>
 
@@ -163,48 +201,48 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </div> -->
-  <script>
-    showMap("manigram-map");
+    <script>
+      showMap("manigram-map");
 
-    function showMap(mapId) {
-      // Hide all map containers
-      var mapContainers = document.querySelectorAll(".map-container");
-      mapContainers.forEach(function (container) {
-        container.style.display = "none";
-      });
+      function showMap(mapId) {
+        // Hide all map containers
+        var mapContainers = document.querySelectorAll(".map-container");
+        mapContainers.forEach(function (container) {
+          container.style.display = "none";
+        });
 
-      // Show the selected map container
-      var selectedMap = document.getElementById(mapId);
-      selectedMap.style.display = "block";
+        // Show the selected map container
+        var selectedMap = document.getElementById(mapId);
+        selectedMap.style.display = "block";
 
-      // Update the active button styling
-      var buttons = document.querySelectorAll("button[data-map]");
-      buttons.forEach(function (button) {
-        button.classList.remove("active");
-      });
-      var activeButton = document.querySelector(
-        `button[data-map="${mapId}"]`
-      );
-      activeButton.classList.add("active");
-    }
-  </script>
-  <!-- location section ends -->
+        // Update the active button styling
+        var buttons = document.querySelectorAll("button[data-map]");
+        buttons.forEach(function (button) {
+          button.classList.remove("active");
+        });
+        var activeButton = document.querySelector(
+          `button[data-map="${mapId}"]`
+        );
+        activeButton.classList.add("active");
+      }
+    </script>
+    <!-- location section ends -->
 
-  <!-- menu-toggler -->
-  <script>
-    function openNav() {
-      document.getElementById("mySidepanel").style.width = "56%";
-      document.querySelector(".showcase1").classList.add("overlay");
-    }
-    
-    function closeNav() {
-      document.getElementById("mySidepanel").style.width = "0";
-      // document.querySelector(".showcase1").classList.remove("overlay");
-    }
+    <!-- menu-toggler -->
+    <script>
+      function openNav() {
+        document.getElementById("mySidepanel").style.width = "56%";
+        document.querySelector(".showcase1").classList.add("overlay");
+      }
+
+      function closeNav() {
+        document.getElementById("mySidepanel").style.width = "0";
+        // document.querySelector(".showcase1").classList.remove("overlay");
+      }
     </script>
 
-  <!-- Footer Section Starts -->
-  <!-- <div class="footer-clean" id="footer">
+    <!-- Footer Section Starts -->
+    <!-- <div class="footer-clean" id="footer">
     <footer>
       <div class="container-footer">
         <div class="footerFlex">
@@ -273,77 +311,49 @@
     </footer>
   </div> -->
 
-  <script>
-    // Add this script at the bottom of your HTML, just before </body>
+    <script>
+      // Add this script at the bottom of your HTML, just before </body>
 
-    // Function to fade out the loading screen when the page is fully loaded
-    window.addEventListener("load", function () {
-      const loadingScreen = document.getElementById("loading-screen");
-      loadingScreen.style.opacity = "0"; // Set opacity to 0 to fade out
-      setTimeout(function () {
-        loadingScreen.style.display = "none"; // Hide the loading screen
-      }, 1000); // Adjust the duration of the fade-out (in milliseconds)
-    });
-  </script>
+      // Function to fade out the loading screen when the page is fully loaded
+      window.addEventListener("load", function () {
+        const loadingScreen = document.getElementById("loading-screen");
+        loadingScreen.style.opacity = "0"; // Set opacity to 0 to fade out
+        setTimeout(function () {
+          loadingScreen.style.display = "none"; // Hide the loading screen
+        }, 1000); // Adjust the duration of the fade-out (in milliseconds)
+      });
+    </script>
 
-  <!-- <div class="t7" style="background-color: #000;text-align: center;
+    <!-- <div class="t7" style="background-color: #000;text-align: center;
             padding: 10px; ">
     <p style="font-size: 1.5rem; color: #ffffff;"><i class="fa-sharp fa-regular fa-copyright"></i> 2023 All Rights
       Reserved || Developed By <a href="https://www.facebook.com/triple7tech" target="_blank"
         style="text-decoration: underline;color:white">Triple Seven</a></p>
   </div> -->
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-  <script>
-    const logoImage = document.querySelector(".mama-logo-img");
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer Section ends -->
 
-    const newImageSrc = "./img/garage-black.png"; // Replace with your new image URL
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        loop: true,
+      });
+    </script>
 
-    // Get a reference to the .headTitle element
-    const headTitle = document.querySelector(".headTitle");
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
 
-    // Function to handle scroll event
-    function handleScroll() {
-      // Check if the user has scrolled beyond a certain point (e.g., 100 pixels from the top)
-      if (window.scrollY > 100) {
-        // Change the image source
-        logoImage.src = newImageSrc;
-
-        // Add the 'scroll-bg' class to apply the background color
-        headTitle.classList.add("scroll-bg");
-      } else {
-        // Remove the 'scroll-bg' class if the user scrolls back to the top
-        headTitle.classList.remove("scroll-bg");
-        logoImage.src = "./img/garage-white.png";
-      }
-    }
-
-    // Add a scroll event listener to the window
-    window.addEventListener("scroll", handleScroll);
-  </script>
-  <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-  <!-- Footer Section ends -->
-
- 
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      loop: true,
-    });
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-    crossorigin="anonymous"></script>
-
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-</body>
-
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  </body>
 </html>
