--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,66 +1,101 @@
-.titleName{
+.titleName {
 	font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: -0.5rem;
+	font-weight: 600;
+	margin-bottom: -0.5rem;
 }
-.overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
+
+.back-image {
 	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
-	z-index: 2; /* Make it appear above other content */
-	display: none; /* Initially hidden */
-  }
-  		#mySidepanel {
-	width: 0;
+	height: 100vh;
+	object-fit: cover;
+	position: relative;
+	z-index: -1;
+}
+
+#mySidepanel {
+	width: 50%;
 	overflow: hidden;
-	transition: 0.5s; /* Add a transition effect for smooth opening/closing */
-  }
-.sidepanel  {
-	width: 56%;
-	position: fixed;
-	z-index: 1;
-	height: 500px;
-	top: 0;
-	left: 0;
-	background-color: #111;
-	overflow-x: hidden;
+	display: none;
 	transition: 0.5s;
-	padding-top: 60px;
-  }
-  
-  .sidepanel a {
+	/* Add a transition effect for smooth opening/closing */
+}
+
+.sidepanel a {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
 	font-size: 25px;
-	color: #818181;
+	color: #ffffff;
 	display: block;
 	transition: 0.3s;
-  }
-  
-  .sidepanel a:hover {
-	color: #f1f1f1;
-  }
-  
-  .sidepanel .closebtn {
+}
+
+.sidepanel a:hover {
+	color: #545454;
+	text-decoration: none;
+}
+
+.sidepanel .closebtn {
 	position: absolute;
 	top: 0;
 	right: 25px;
 	font-size: 36px;
-  }
-  
-  .openbtn {
+}
+
+.openbtn {
 	font-size: 20px;
 	cursor: pointer;
 	background-color: transparent;
 	color: #000;
 	padding: 10px 15px;
 	border: none;
-	margin-left: 27%;
-  }
-  
-  /* .openbtn:hover {
+	margin-left: 20%;
+}
+
+/* .openbtn:hover {
 	background-color:#444;
   } */
+/* Add this CSS to your existing styles */
+.sidepanel {
+	height: 100%;
+	/* Adjust the height as needed */
+	width: 50%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: #4b8c91;
+	overflow-x: hidden;
+	transition: 0.5s;
+	z-index: 2;
+	/* Ensure the sidepanel is above the content */
+}
+
+.showcase-main {
+	display: flex;
+	height: 100vh;
+	position: relative;
+	z-index: -1;
+	/* Ensure the main content is behind the sidepanel */
+}
+
+.showcase-main .showcase1 {
+	width: 50%;
+	position: relative;
+	z-index: -1;
+}
+
+.showcase-main .showcase2 {
+	width: 50%;
+	position: relative;
+	z-index: 1;
+}
+
+@media (max-width: 900px) {
+	.showcase-main .showcase1 {
+		display: none;
+	}
+
+	.showcase-main .showcase2 {
+		width: 100%;
+	}
+
+}
