--- a/public/css/bookForm.css
+++ b/public/css/bookForm.css
@@ -1,16 +1,13 @@
 .bookForm{
-    text-align: center;
-    margin-top: 20%;
+  padding: 5rem;
 }
+
 .formHeading{
     color: #ffffff;
     font-size: 2rem;
     font-family: 'Poppins', sans-serif;
 }
-.form{
-    width: 60%;
-    margin-left: 20%;
-}
+
 .form label{
  float: left;
  color: #ffffff;
@@ -40,4 +37,10 @@ input[type=date], select {
   /* Add a background color to the submit button on mouse-over */
   input[type=submit]:hover {
     background-color: #45a049;
+  }
+
+  @media(max-width:900px){
+    .bookForm{
+      padding: 1rem;
+    }
   }
