--- a/public/css/header.css
+++ b/public/css/header.css
@@ -12,7 +12,15 @@
 	z-index: -1;
 }
 
+.scroll-bg{
+	background: #ffffff;
+	width: 100%;
+	color: black;
+	/* background: none; */
+}
+
 #mySidepanel {
+	background: #FF9D29;
 	width: 50%;
 	overflow: hidden;
 	display: none;
@@ -34,22 +42,58 @@
 	text-decoration: none;
 }
 
-.sidepanel .closebtn {
+/* .sidepanel .closebtn {
 	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 36px;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+	font-size: 2.5rem;
 }
 
 .openbtn {
-	font-size: 20px;
+	font-size: 2rem;
 	cursor: pointer;
 	background-color: transparent;
 	color: #000;
-	padding: 10px 15px;
+	padding: 1rem;
 	border: none;
-	margin-left: 20%;
 }
+
+.openbtn::before{
+	content: "\f0c9";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900; 
+    font-style: normal;
+} */
+
+.openbtn {
+    font-size: 2rem;
+    cursor: pointer;
+    background-color: transparent;
+    color: #000;
+    padding: 1rem;
+    border: none;
+	z-index: 1000000;
+	outline: none;
+}
+
+.openbtn::before {
+    content: "\f0c9"; /* Menu icon */
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    font-style: normal;
+}
+
+/* For the cross icon */
+.openbtn.active::before {
+    content: "\f00d"; /* Cross icon */
+}
+
+.sidepanel {
+    /* Your side panel styles */
+    display: none;
+}
+
 
 /* .openbtn:hover {
 	background-color:#444;
@@ -64,16 +108,24 @@
 	left: 0;
 	background-color: #4b8c91;
 	overflow-x: hidden;
-	transition: 0.5s;
+    animation: slidein 0.5s ease-in;
 	z-index: 2;
 	/* Ensure the sidepanel is above the content */
+}
+
+@keyframes slidein {
+    from {
+        top: -50%; /* Start from the left (off the screen) */
+    }
+    to {
+        top: 0; /* Slide to the fully visible position */
+    }
 }
 
 .showcase-main {
 	display: flex;
 	height: 100vh;
 	position: relative;
-	z-index: -1;
 	/* Ensure the main content is behind the sidepanel */
 }
 
@@ -87,9 +139,24 @@
 	width: 50%;
 	position: relative;
 	z-index: 1;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 900px) {
+
+	.titleName {
+		font-size: 1rem;
+		font-weight: 600;
+		margin-bottom: -0.5rem;
+	}
+
+	#mySidepanel {
+		width: 100%;
+		/* Add a transition effect for smooth opening/closing */
+	}
+
 	.showcase-main .showcase1 {
 		display: none;
 	}
