--- a/public/css/header.css
+++ b/public/css/header.css
@@ -16,6 +16,8 @@
 	background: #ffffff;
 	width: 100%;
 	color: black;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+
 	/* background: none; */
 }
 
