--- a/public/css/ourTopPicks.css
+++ b/public/css/ourTopPicks.css
@@ -8,3 +8,37 @@
     font-size: 4rem;
     font-weight: 600;
 }
+.ourTopPicks-card{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.slider{
+    max-width: 1100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-bottom: 50px;
+  }
+  .slider .card{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1;
+    margin: 0 10px;
+    background: #fff;
+  }
+  .slider .card .img{
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+  }
+  .slider .card .img img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+
