--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/bookForm.css" />
   <link rel="stylesheet" href="/css/ourTopPicks.css" />
   <link rel="stylesheet" href="/css/loadingScreen.css" />
+  <link rel="stylesheet" href="/css/faq.css" />
 
   <!--Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
@@ -23,6 +24,12 @@
 
   <!--Swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
 
   <!-- local CSS -->
   <link href="lib/animate/animate.min.css" rel="stylesheet" />
@@ -34,60 +41,60 @@
   <div id="loading-screen"></div>
 
   <!-- header section starts -->
-    <div class="headTitle">
-      <div class="brand-div">
-        <a href="/" class="logo"><img src="/img/rental_logo.png" /></a>
-        <div class="textContainer">
-          <p class="titleName">BUTWAL BIKE RENTALS</p>
-          <p class="slogan">Make Every Ride Special</p>
-        </div>
+  <div class="headTitle">
+    <div class="brand-div">
+      <a href="/" class="logo"><img src="/img/rental_logo.png" /></a>
+      <div class="textContainer">
+        <p class="titleName">BUTWAL BIKE RENTALS</p>
+        <p class="slogan">Make Every Ride Special</p>
       </div>
-      <!-- <button class="openbtn" onclick="toggleNav()">Toggle Nav</button> -->
+    </div>
+    <!-- <button class="openbtn" onclick="toggleNav()">Toggle Nav</button> -->
 
-      <div id="mySidepanel" class="sidepanel">
-        <!-- <a href="javascript:void(0)" class="closebtn" id="closeBtn" onclick="closeNav()">×</a> -->
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-      </div>
-      
-      <div class="openbtn" onclick="toggleNav()"></div>
+    <div id="mySidepanel" class="sidepanel">
+      <!-- <a href="javascript:void(0)" class="closebtn" id="closeBtn" onclick="closeNav()">×</a> -->
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Clients</a>
+      <a href="#footer">Contact</a>
+    </div>
 
-      <!-- <div class="openbtn" onclick="openNav()">
+    <div class="openbtn" onclick="toggleNav()"></div>
+
+    <!-- <div class="openbtn" onclick="openNav()">
         <i class="fas fa-bars" id="menu"></i>
       </div> -->
+  </div>
+  <div class="showcase-main">
+    <div class="showcase1">
+      <img class="back-image" src="/img/customer1.jpg" alt="" />
     </div>
-    <div class="showcase-main">
-      <div class="showcase1">
-        <img class="back-image" src="/img/customer1.jpg" alt="" />
-      </div>
-      <div class="showcase2" style="background-color: #4b8c91 !important">
-        <div class="bookForm">
-          <div class="formTitle">
-            <p class="formHeading">PICK YOUR NEXT RIDE</p>
-          </div>
-          <div class="form">
-            <form action="#" method="post">
-              <label for="startDate">Start Date</label>
-              <input type="date" id="startDate" name="startDate">
+    <div class="showcase2" style="background-color: #4b8c91 !important">
+      <div class="bookForm">
+        <div class="formTitle">
+          <p class="formHeading">PICK YOUR NEXT RIDE</p>
+        </div>
+        <div class="form">
+          <form action="#" method="post">
+            <label for="startDate">Start Date</label>
+            <input type="date" id="startDate" name="startDate">
 
-              <label for="endDate">End DAte</label>
-              <input type="date" id="endDate" name="endDate">
+            <label for="endDate">End DAte</label>
+            <input type="date" id="endDate" name="endDate">
 
-              <label for="bikebrand">Choose Brand</label>
-              <select id="bikebrand" name="bikebrand">
-                <option value="pulsar">Pulsar</option>
-                <option value="yamaha">Yamaha</option>
-                <option value="tvs">TVS</option>
-              </select>
-              <input type="submit" value="Submit">
-            </form>
-          </div>
+            <label for="bikebrand">Choose Brand</label>
+            <select id="bikebrand" name="bikebrand">
+              <option value="pulsar">Pulsar</option>
+              <option value="yamaha">Yamaha</option>
+              <option value="tvs">TVS</option>
+            </select>
+            <input type="submit" value="Submit">
+          </form>
         </div>
       </div>
     </div>
-  
+  </div>
+
   <!-- header section ends -->
 
   <!-- why-Us starts -->
@@ -161,12 +168,126 @@
   <!-- why-Us ends -->
 
   <!-- our-top-picks starts -->
-    <div class="our-top-picks">
-      <div class="ourTopPicks-heading">
-        <p>Our Top Picks</p>
+  <div class="our-top-picks">
+    <div class="ourTopPicks-heading">
+      <p>Our Top Picks</p>
+    </div>
+    <div class="ourTopPicks-card">
+      <div class="slider owl-carousel">
+        <a href="#">
+          <div class="card">
+            <div class="img">
+              <img src="/img/bullet.png" alt="">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card">
+            <div class="img">
+              <img src="/img/duke.png" alt="">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card">
+            <div class="img">
+              <img src="/img/dio.png" alt="">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card">
+            <div class="img">
+              <img src="/img/fz.png" alt="">
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card">
+            <div class="img">
+              <img src="/img/ns.png" alt="">
+            </div>
+          </div>
+        </a>
+       
+      </div>
+      <!-- <div class="slider-nav">
+        <button class="prev"><i class="fas fa-chevron-left"></i></button>
+        <button class="next"><i class="fas fa-chevron-right"></i></button>
+      </div> -->
+     
+    </div>
+  </div>
+  <!-- our-top-picks ends -->
+
+  <!-- Quick Questions starts -->
+  <div class="findus mb-5" id="about">
+    <h2 class="heading section_heading"><p>Quick Questions</p></h2>
+    <div class="box-container">
+      <div class="box">
+        <div id="faq">
+      
+    <!-- Template for an individual FAQ item -->
+    <!-- <script type="text/template" id="faq-item-template"> -->
+          <p class="question wow zoomIn" data-wow-delay="0.3s">1. How do i make reservation?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">2. What documents do I need to rent a motorbike?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">3. Is there a minimum age requirement to rent a motorbike?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">4. Can I cancel or modify my reservation?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">5. Do you provide riding gear??<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">6. What is your fuel policy?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">7. What happens if the motorbike breaks down or I have an issue on the road?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+          <p class="question wow zoomIn" data-wow-delay="0.3s">8. Are there any mileage restrictions?<i class="fas fa-chevron-down ml-3"></i></p>
+          <p class="display_toggle answer">Call me</p>
+        <!-- </script> -->
+        </div>
       </div>
     </div>
-  <!-- our-top-picks ends -->
+  </div>
+
+  <script>
+    const questions = document.querySelectorAll('#faq .question');
+    questions.forEach(question => {
+      question.addEventListener('click', () => {
+        const answer = question.nextElementSibling;
+        answer.classList.toggle('display_toggle');
+      });
+    });
+  </script>
+  <!-- <script>
+    fetch('js/faq.json')
+      .then(response => response.json())
+      .then(faqData => {
+        const faqList = document.querySelector('#faq');
+        const faqItemTemplate = document.querySelector('#faq-item-template').innerHTML;
+  
+        faqData.forEach(faqItem => {
+          const faqItemHtml = faqItemTemplate
+            .replace('{{ question }}', faqItem.question)
+            .replace('{{ answer }}', faqItem.answer);
+  
+          faqList.innerHTML += faqItemHtml;
+        });
+  
+    
+        const questions = document.querySelectorAll('#faq .question');
+        questions.forEach(question => {
+          question.addEventListener('click', () => {
+            const answer = question.nextElementSibling;
+            answer.classList.toggle('display_toggle');
+          });
+        });
+      })
+      .catch(error => console.error('Error loading FAQ:', error));
+  </script> -->
+  <!-- Quick Questions ends -->
 
   <!-- location section starts -->
   <!-- <div class="location">
@@ -226,17 +347,17 @@
   <!-- JavaScript for menu toggle -->
   <script>
     function toggleNav() {
-    var sidepanel = document.getElementById("mySidepanel");
-    var openbtn = document.querySelector(".openbtn");
+      var sidepanel = document.getElementById("mySidepanel");
+      var openbtn = document.querySelector(".openbtn");
 
-    if (sidepanel.style.display === "block") {
+      if (sidepanel.style.display === "block") {
         sidepanel.style.display = "none";
         openbtn.classList.remove("active");
-    } else {
+      } else {
         sidepanel.style.display = "block";
         openbtn.classList.add("active");
+      }
     }
-}
 
     // function toggleNav() {
     //         var sidepanel = document.getElementById("mySidepanel");
@@ -248,11 +369,31 @@
     //     }
 
   </script>
-  
+
+  <script>
+    $(".slider").owlCarousel({
+      loop: true,
+      autoplay: true,
+      autoplayTimeout: 2000,
+      autoplayHoverPause: true,
+      responsive: {
+            0: {
+                items: 1 
+            },
+            768: {
+                items: 3 
+            },
+            992: {
+                items: 4 
+            }
+        } 
+    });
+  </script>
+
 
 
   <!-- Footer Section Starts -->
-  <!-- <div class="footer-clean" id="footer">
+  <div class="footer-clean" id="footer">
     <footer>
       <div class="container-footer">
         <div class="footerFlex">
@@ -301,17 +442,17 @@
             <p class="text-left ml-5 section_heading">Contact</p>
             <ul class="text-left ml-5">
               <li class="wow fadeInLeft" data-wow-delay="0.8s">
-                <i class="fas fa-book-reader"></i><span class="hover-underline-animation">Mama Garage & Motor
+                <i class="fas fa-book-reader"></i><span class="hover-underline-animation">Butwal Bike Rental
                   Parts</span>
               </li>
               <li class="wow fadeInLeft" data-wow-delay="0.8s">
                 <i class="fas fa-map-pin"></i><Span class="hover-underline-animation">&nbsp;Manigram, Rupandehi</Span>
               </li>
               <li class="wow fadeInLeft" data-wow-delay="0.8s">
-                <i class="far fa-envelope"></i><Span class="hover-underline-animation">info@mamamotorparts.com</Span>
+                <i class="far fa-envelope"></i><Span class="hover-underline-animation">info@butwalbikerental.com</Span>
               </li>
               <li class="wow fadeInLeft" data-wow-delay="0.8s">
-                <i class="fas fa-phone-volume"></i><Span class="hover-underline-animation">9802699773 |
+                <i class="fas fa-phone-volume"></i><Span class="hover-underline-animation">9857044750 |
                   9802699771</Span>
               </li>
             </ul>
@@ -319,7 +460,7 @@
         </div>
       </div>
     </footer>
-  </div> -->
+  </div>
 
   <script>
     // Add this script at the bottom of your HTML, just before </body>
@@ -334,45 +475,46 @@
     });
   </script>
 
-<script>
-  const logoImage = document.querySelector(".mama-logo-img");
+  <script>
+    const logoImage = document.querySelector(".mama-logo-img");
 
-  const newImageSrc = "./img/garage-black.png"; // Replace with your new image URL
+    const newImageSrc = "./img/garage-black.png"; // Replace with your new image URL
 
-  // Get a reference to the .headTitle element
-  const headTitle = document.querySelector(".headTitle");
+    // Get a reference to the .headTitle element
+    const headTitle = document.querySelector(".headTitle");
 
-  // Function to handle scroll event
-  function handleScroll() {
-    // Check if the user has scrolled beyond a certain point (e.g., 100 pixels from the top)
-    if (window.scrollY > 100) {
-      // Change the image source
-      // logoImage.src = newImageSrc;
+    // Function to handle scroll event
+    function handleScroll() {
+      // Check if the user has scrolled beyond a certain point (e.g., 100 pixels from the top)
+      if (window.scrollY > 100) {
+        // Change the image source
+        // logoImage.src = newImageSrc;
 
-      // Add the 'scroll-bg' class to apply the background color
-      headTitle.classList.add("scroll-bg");
-    } else {
-      // Remove the 'scroll-bg' class if the user scrolls back to the top
-      headTitle.classList.remove("scroll-bg");
-      // logoImage.src = "./img/garage-white.png";
+        // Add the 'scroll-bg' class to apply the background color
+        headTitle.classList.add("scroll-bg");
+      } else {
+        // Remove the 'scroll-bg' class if the user scrolls back to the top
+        headTitle.classList.remove("scroll-bg");
+        // logoImage.src = "./img/garage-white.png";
+      }
     }
-  }
 
-  // Add a scroll event listener to the window
-  window.addEventListener("scroll", handleScroll);
-</script>
+    // Add a scroll event listener to the window
+    window.addEventListener("scroll", handleScroll);
+  </script>
 
-  <!-- <div class="t7" style="background-color: #000;text-align: center;
+  <div class="t7" style="text-align: center;
             padding: 10px; ">
-    <p style="font-size: 1.5rem; color: #ffffff;"><i class="fa-sharp fa-regular fa-copyright"></i> 2023 All Rights
+    <p style="font-size: 1.5rem; color: #000;"><i class="fa-sharp fa-regular fa-copyright"></i> 2023 All Rights
       Reserved || Developed By <a href="https://www.facebook.com/triple7tech" target="_blank"
-        style="text-decoration: underline;color:white">Triple Seven</a></p>
-  </div> -->
+        style="text-decoration: underline;color:#000">Triple Seven</a></p>
+  </div>
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
   <!-- Footer Section ends -->
 
   <!-- Initialize Swiper -->
@@ -381,6 +523,34 @@
       slidesPerView: 1,
       spaceBetween: 30,
       loop: true,
+    });
+  </script>
+
+  <script>
+    $(".testmonial_slider_area").owlCarousel({
+      autoplay: false,
+      slideSpeed: 10000,
+      items: 3,
+      loop: true,
+      nav: true,
+      navText: ['<i class="fa fa-arrow-left"></i>', '<i class="fa fa-arrow-right"></i>'],
+      margin: 30,
+      dots: true,
+      responsive: {
+        320: {
+          items: 1
+        },
+        767: {
+          items: 2
+        },
+        600: {
+          items: 2
+        },
+        1000: {
+          items: 3
+        }
+      }
+
     });
   </script>
 
