footer styling improvemtns

--- a/public/css/bookForm.css
+++ b/public/css/bookForm.css
@@ -1,11 +1,13 @@
 .bookForm{
   padding: 5rem;
+
 }
 
 .formHeading{
     color: #ffffff;
     font-size: 2rem;
     font-family: 'Poppins', sans-serif;
+    text-align: center;
 }
 
 .form label{
