--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
     <div class="showcase1">
       <img class="back-image" src="/img/customer1.jpg" alt="" />
     </div>
-    <div class="showcase2" style="background-color: #4b8c91 !important">
+    <div class="showcase2">
       <div class="bookForm">
         <div class="formTitle">
           <p class="formHeading">PICK YOUR NEXT RIDE</p>
@@ -461,6 +461,12 @@
       </div>
     </footer>
   </div>
+  <div class="t7" style="text-align: center;
+            padding: 10px; ">
+    <p style="font-size: 1rem; color: #000;"><i class="fa-sharp fa-regular fa-copyright"></i> 2023 All Rights
+      Reserved || Developed By <a href="https://www.facebook.com/triple7tech" target="_blank"
+        style="text-decoration: underline;color:#000">Triple Seven</a></p>
+  </div>
 
   <script>
     // Add this script at the bottom of your HTML, just before </body>
@@ -476,9 +482,6 @@
   </script>
 
   <script>
-    const logoImage = document.querySelector(".mama-logo-img");
-
-    const newImageSrc = "./img/garage-black.png"; // Replace with your new image URL
 
     // Get a reference to the .headTitle element
     const headTitle = document.querySelector(".headTitle");
@@ -503,12 +506,7 @@
     window.addEventListener("scroll", handleScroll);
   </script>
 
-  <div class="t7" style="text-align: center;
-            padding: 10px; ">
-    <p style="font-size: 1.5rem; color: #000;"><i class="fa-sharp fa-regular fa-copyright"></i> 2023 All Rights
-      Reserved || Developed By <a href="https://www.facebook.com/triple7tech" target="_blank"
-        style="text-decoration: underline;color:#000">Triple Seven</a></p>
-  </div>
+  
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
