--- a/public/css/header.css
+++ b/public/css/header.css
@@ -12,7 +12,7 @@
 	z-index: -1;
 }
 
-.scroll-bg{
+.scroll-bg {
 	background: #ffffff;
 	width: 100%;
 	color: black;
@@ -69,31 +69,32 @@
 } */
 
 .openbtn {
-    font-size: 2rem;
-    cursor: pointer;
-    background-color: transparent;
-    color: #000;
-    padding: 1rem;
-    border: none;
+	font-size: 2rem;
+	cursor: pointer;
+	background-color: transparent;
+	padding: 1rem;
+	border: none;
 	z-index: 1000000;
 	outline: none;
 }
 
 .openbtn::before {
-    content: "\f0c9"; /* Menu icon */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
-    font-style: normal;
+	content: "\f0c9";
+	/* Menu icon */
+	font-family: "Font Awesome 6 Free";
+	font-weight: 900;
+	font-style: normal;
 }
 
 /* For the cross icon */
 .openbtn.active::before {
-    content: "\f00d"; /* Cross icon */
+	content: "\f00d";
+	/* Cross icon */
 }
 
 .sidepanel {
-    /* Your side panel styles */
-    display: none;
+	/* Your side panel styles */
+	display: none;
 }
 
 
@@ -110,18 +111,21 @@
 	left: 0;
 	background-color: #4b8c91;
 	overflow-x: hidden;
-    animation: slidein 0.5s ease-in;
+	animation: slidein 0.5s ease-in;
 	z-index: 2;
 	/* Ensure the sidepanel is above the content */
 }
 
 @keyframes slidein {
-    from {
-        top: -50%; /* Start from the left (off the screen) */
-    }
-    to {
-        top: 0; /* Slide to the fully visible position */
-    }
+	from {
+		top: -50%;
+		/* Start from the left (off the screen) */
+	}
+
+	to {
+		top: 0;
+		/* Slide to the fully visible position */
+	}
 }
 
 .showcase-main {
@@ -142,9 +146,11 @@
 	position: relative;
 	z-index: 1;
 	display: flex;
-    justify-content: center;
-    align-items: center;
+	justify-content: center;
+	align-items: center;
+	background: #4b8c91/* Replace 'your-image-url.jpg' with the actual image URL */
 }
+
 
 @media (max-width: 900px) {
 
@@ -166,5 +172,28 @@
 	.showcase-main .showcase2 {
 		width: 100%;
 	}
+
+	.showcase-main .showcase2 {
+		
+		background: url('/img/customer1.jpg'); /* Replace 'your-image-url.jpg' with the actual image URL */
+		background-size: cover; /* Adjust as needed */
+		position: relative;
+	}
+	
+	.showcase-main .showcase2::before {
+	  content: "";
+	  background: rgba(0, 0, 0, 0.7);
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  height: 100%;
+	  z-index: 1;
+	}
+	
+	.showcase-main .showcase2 .bookForm {
+		z-index: 3; /* Content on top of the image and overlay */
+		color: white; /* Text color for visibility */
+	  }
 
 }
