--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -43,7 +43,7 @@
 
 .findus .box-container .box {
 	width: 100%;
-	background: var(--black);
+	/* background: var(--black); */
 	/* box-shadow: var(--box-shadow); */
 	text-align: center;
 	padding-bottom: 1%;
@@ -69,7 +69,7 @@
 	cursor:pointer;
 	font-size:1.2rem;
     text-align: center;
-	color: grey;
+	background-color: #FF9D29;
 	color: #7f7f7f;
 
 }
